--- a/less/richtext.less
+++ b/less/richtext.less
@@ -29,11 +29,26 @@
   .richtext {
     font-size: 1.2rem;
     line-height: 1.45;
+    padding: 0 1.5rem;
 
     &_cap {
       font-size: 3.5rem;
       line-height: 0.8em;
       padding: .2rem .5rem 0 0;
+    }
+  }
+}
+
+@media screen and ( max-width: 450px ) {
+  .richtext {
+    font-size: 1.05rem;
+    line-height: 1.4;
+    padding: 0 1rem;
+
+    &_cap {
+      font-size: 2.5rem;
+      line-height: 0.6em;
+      padding: .6rem .5rem 0 0;
     }
   }
 }
