--- a/less/section.less
+++ b/less/section.less
@@ -7,3 +7,11 @@
     margin-top: 2rem;
   }
 }
+
+@media screen and ( max-width: 450px ) {
+  .section {
+    &--first {
+      margin-top: 0;
+    }
+  }
+}
