--- a/less/slow-scroll-col.less
+++ b/less/slow-scroll-col.less
@@ -63,3 +63,16 @@
     }
   }
 }
+
+@media screen and ( max-width: 850px ) {
+  .slow-scroll-col {
+    &_enhance {
+      display: block;
+    }
+
+
+    &_figure + &_figure {
+      margin-left: 0;
+    }
+  }
+}
