--- a/less/utils.less
+++ b/less/utils.less
@@ -7,6 +7,10 @@
     clip: rect(1px, 1px, 1px, 1px);
   }
 
+  &-is-hidden {
+    display: none;
+  }
+
   &-floats-right {
     float: right;
   }
